# PoissonRecon

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmark_octree.cpp  benchmark_poisson.cpp
src/: BSpline.hpp  CMakeLists.txt  Debug.cpp  Emst.cpp  Emst.hpp  HRefine.cpp  HRefine.hpp  Metrics.hpp  Node.cpp  Node.hpp  Normal.cpp  Normal.hpp  Octree.cpp  Octree.hpp  PPolynomial.cpp  PPolynomial.hpp  PPolynomialXd.hpp  PoissonRecon.cpp  PoissonRecon.hpp  Polynomial.cpp  Polynomial.hpp  PolynomialXd.hpp  RiemannianGraph.cpp  RiemannianGraph.hpp  basis.cpp  basis.hpp  debug.txt  integration.hpp  io.cpp  io.hpp  main.cpp  pOctree.cpp  pOctree.hpp  plot.cpp  plotIndicator.cpp  plotPoisson.cpp  plotScalarField.cpp  sampling.cpp  sampling.hpp  test.cpp  (+2 more)
src/utils/: graphs.cpp  graphs.hpp  io.cpp  io.hpp  linalg.cpp  linalg.hpp  plot.cpp  plot.hpp  sampling.cpp  sampling.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  bspline.cpp  octree.cpp  polynomial.cpp  polynomialxd.cpp  ppolynomial.cpp  riemannian.cpp  test_normal_utils.cpp  tests_octree.cpp  tests_p_octree.cpp
